Many updates, fixed session saved auth, abstracted db info

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Chirp</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0/angular-route.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.0/angular-resource.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0/angular-resource.min.js"></script>
     <script src="js/chirpApp.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -19,7 +19,7 @@
                 <span class="navbar-text">Learn the MEAN stack by building this app</span>
                 <form class="float-right ml-auto">
                     <div ng-hide="authenticated">
-                        <a href="#/login">Login</a> / <a href="#/signup">Signup</a>
+                        I'm {{current_user}} <a href="#/login">Login</a> / <a href="#/signup">Signup</a>
                     </div>
                     <div ng-show="authenticated">
                         Signed in as <a href="#/account">{{current_user}}</a> / <a href="#" ng-click="signout()">Logout</a>
