--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="container">
             <a class="navbar-brand" href="#"> Chirp! </a>
             <div class="collapse navbar-collapse">
-                <span class="navbar-text">Learn the MEAN stack by building this app</span>
+                <span class="navbar-text">Cat is nice cat. lvl 1 cat. i take, k.</span>
                 <form class="float-right ml-auto">
                     <div ng-hide="authenticated">
                         I'm {{current_user}} <a href="#/login">Login</a> / <a href="#/signup">Signup</a>
