--- a/public/main.html
+++ b/public/main.html
@@ -1,7 +1,7 @@
 <div class="jumbotron text-center">
     <h1>Chirp!</h1>
     <p>
-        The non-biased place to voice yourself.
+        A safe place for cats of all paws. Many bird. Yum.
     </p>
 </div>
 <div class="container mb-5" id="post-form">
